--- a/unlock-the-power-of-data-with-quant-catalog-python-and-django-orm-for-convenient-access-to-stored-resources.html
+++ b/unlock-the-power-of-data-with-quant-catalog-python-and-django-orm-for-convenient-access-to-stored-resources.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Unlock the Power of Data with Quant Catalog - Python and Django's ORM for Convenient Access to Stored Data</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Maciej Jaroszewski | Portfolio Website</title>
+    <meta name="description" content="Check out our Quant Catalog page! This Python application is powered by Django and its Object-Relational Mapper, providing a pythonical way to create SQL queries and manipulate your database with ease. Users can view different trading strategies and related financial markets, and registered subscribers can even create their own investment strategies. To ensure safe data transfer, we use Django's built-in cross-site request forgery protection in web forms.">
+    <meta name="author" content="Maciej Jaroszewski">
+    <meta id="keywords" name="keywords" content="mjaroszewski, django, python, html5up!, orm, selenium" />
+    <meta property="og:site_name" content="https://mjaroszewski.website" />
+    <meta property="og:url" content="https://mjaroszewski.website/unlock-the-power-of-data-with-quant-catalog-python-and-django-orm-for-convenient-access-to-stored-resources.html" />
+    <meta property="og:title" content="Unlock the Power of Data with Quant Catalog - Python and Django's ORM for Convenient Access to Stored Data" />
+    <meta property="og:description" content="Check out our Quant Catalog page! This Python application is powered by Django and its Object-Relational Mapper, providing a pythonical way to create SQL queries and manipulate your database with ease. Users can view different trading strategies and related financial markets, and registered subscribers can even create their own investment strategies. To ensure safe data transfer, we use Django's built-in cross-site request forgery protection in web forms." />
+    <meta property="og:type" content="article" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NatLife_quest" />
+    <meta name="twitter:url" content="https://mjaroszewski.website" />
+    <meta name="twitter:title" content="Unlock the Power of Data with Quant Catalog - Python and Django's ORM for Convenient Access to Stored Data" />
+    <meta name="twitter:description" content="Check out our Quant Catalog page! This Python application is powered by Django and its Object-Relational Mapper, providing a pythonical way to create SQL queries and manipulate your database with ease. Users can view different trading strategies and related financial markets, and registered subscribers can even create their own investment strategies. To ensure safe data transfer, we use Django's built-in cross-site request forgery protection in web forms." />
+    <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/quant-catalog.png" />
+    
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
