--- a/data-analysis.html
+++ b/data-analysis.html
@@ -79,65 +79,65 @@
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/market-bias.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <a href="technical-analysis-tools-for-s&p-500-python-flask-and-plotly.html"><img src="assets/imgs/market-bias.png" class="blog-card-img" alt="market bias website mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">This application is built on Python and Flask, and it leverages the power of Pandas and Plotly to provide historical data of the S&P 500.</h6>
                         <p><b>To do this, it uses the Pandas Datareader to connect to the Yahoo Finance API and apply various technical analysis tools. One of the standout features of this application is its interactive visualizations, which are made possible by Plotly. Users can easily view market bias and explore different trends. In addition, the website also offers a simple and profitable trading strategy known as Dual Momentum. The application also includes a table of various stock indices, grouped by their one-year rate of change. This table is updated daily and uses historical data sourced from Yahoo Finance API.
                         </b></p>
-                        <a href="market-bias.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="technical-analysis-tools-for-s&p-500-python-flask-and-plotly.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/stooq-api.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <a href="discover-trend-direction-for-financial-instruments-with-stooq-api-powered-by-fastapi-and-python.html"><img src="assets/imgs/stooq-api.png" class="blog-card-img" alt="Stooq API website mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">This app has one primary function: to display the current trend direction of financial instruments included in Stooq's database.</h6>
                         <p><b>To achieve this, the user inputs their desired parameters, and the application accesses the historical data for those instruments. Once the data is accessed, the app calculates moving averages using three lookback periods: 50-day, 100-day, and 200-day. These moving averages provide a helpful indicator of the trend direction for each instrument.
                             The beauty of FastAPI is that it is designed to be performant and easy to use. It's lightweight, so it can handle heavy loads without sacrificing speed. And its intuitive design means that developers can quickly create APIs with minimal code.
                         </b></p>
-                        <a href="stooq-api.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="discover-trend-direction-for-financial-instruments-with-stooq-api-powered-by-fastapi-and-python.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/quant-catalog.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <a href="unlock-the-power-of-data-with-quant-catalog-python-and-django-orm-for-convenient-access-to-stored-resources.html"><img src="assets/imgs/quant-catalog.png" class="blog-card-img" alt="Quant Catalog website mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">This is a Python application powered by Django and its Object-Relational Mapper to provide convenient access to stored data.</h6>
                         <p><b>In fact, Django's ORM is just a pythonical way to create SQL to query and manipulate your database and get results in a pythonic fashion. In this particular case users are able to view different trading strategies and related financial markets. After completing the registration subscribers can login and are now able to create their own investment strategy. To delete records from the database users need to be added to special group and granted permissions by the website administrator.
                             Static files are served with WhiteNoise to accomplish high performance and efficiency without depending on nginx, Amazon S3 or any other external service.
                         </b></p>
-                        <a href="quant-catalog.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="unlock-the-power-of-data-with-quant-catalog-python-and-django-orm-for-convenient-access-to-stored-resources.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/trend-follower.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <a href="track-financial-markets-with-python-and-fred-api-introducing-flask-powered-12-month-momentum-investment-strategy-tool.html"><img src="assets/imgs/trend-follower.png" class="blog-card-img" alt="Trend Follower website mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">This is a Python application powered by Flask-Login to provide user session management.</h6>
                         <p><b>Its main function is to present current direction for selected financial markets. After completing the registration process users are gaining access to multiple instruments. This website is using pandas-datareader to fetch historical data from FRED. Before results are being displayed application is calculating very simple 12-month momentum formula to determine actual trend.
                             One of the most noteworthy features of this application is a highly adaptable and scalable workflow for structuring and configuring a production-grade structure using flask blueprints and the application factory pattern.
                         </b></p>
-                        <a href="trend-follower.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="track-financial-markets-with-python-and-fred-api-introducing-flask-powered-12-month-momentum-investment-strategy-tool.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/dogs-of-dow.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <a href="find-dow-jones-dividend-trends-with-pythons-fastapi-and-yahoo-finance.html"><img src="assets/imgs/dogs-of-dow.png" class="blog-card-img" alt="dogs of dow website mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">This is an application build with one of the fastest Python web frameworks - FastAPI. </h6>
                         <p><b>In fact, its speed is at par with Node.js and Go, it also creates plugins easily using dependency injection. The main function is to display current trend direction for 10 best high-yield dividend members of the Dow Jones Industrial Index included in Yahoo Finance's database. After receiving user input, application is gaining access to particular stock historical data by utilizing pandas-datareader. 
                             For password hashing, we can use Werkzeug Security to define functions that handle password hashing and checking if a password is correct.
                         </b></p>
-                        <a href="dogs-of-dow.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="find-dow-jones-dividend-trends-with-pythons-fastapi-and-yahoo-finance.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
     
