added new sections in ai page

--- a/discover-the-power-of-magic-submitter-the-ultimate-seo-automation-tool.html
+++ b/discover-the-power-of-magic-submitter-the-ultimate-seo-automation-tool.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Discover the Power of Magic Submitter: The Ultimate SEO Automation Tool</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Maciej Jaroszewski | Portfolio Website</title>
+    <meta name="description" content="Looking to take your SEO game to the next level? Look no further than Magic Submitter. In this review, we'll explore the powerful and versatile features of this SEO tool, including backlink building, traffic increase, and improved search engine rankings. With automated account creation, scheduling, and reporting, plus a user-friendly interface, even non-experts can get great results. Don't miss out on the opportunity to optimize your digital marketing efforts with Magic Submitter - read on for our full product review.">
+    <meta name="author" content="Maciej Jaroszewski">
+    <meta id="keywords" name="keywords" content="seo, digital marketing, product review, automation" />
+    <meta property="og:site_name" content="https://mjaroszewski.website" />
+    <meta property="og:url" content="https://mjaroszewski.website/discover-the-power-of-magic-submitter-the-ultimate-seo-automation-tool.html" />
+    <meta property="og:title" content="Discover the Power of Magic Submitter: The Ultimate SEO Automation Tool" />
+    <meta property="og:description" content="Looking to take your SEO game to the next level? Look no further than Magic Submitter. In this review, we'll explore the powerful and versatile features of this SEO tool, including backlink building, traffic increase, and improved search engine rankings. With automated account creation, scheduling, and reporting, plus a user-friendly interface, even non-experts can get great results. Don't miss out on the opportunity to optimize your digital marketing efforts with Magic Submitter - read on for our full product review." />
+    <meta property="og:type" content="article" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NatLife_quest" />
+    <meta name="twitter:url" content="https://mjaroszewski.website" />
+    <meta name="twitter:title" content="Discover the Power of Magic Submitter: The Ultimate SEO Automation Tool" />
+    <meta name="twitter:description" content="Looking to take your SEO game to the next level? Look no further than Magic Submitter. In this review, we'll explore the powerful and versatile features of this SEO tool, including backlink building, traffic increase, and improved search engine rankings. With automated account creation, scheduling, and reporting, plus a user-friendly interface, even non-experts can get great results. Don't miss out on the opportunity to optimize your digital marketing efforts with Magic Submitter - read on for our full product review." />
+    <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/magic-submitter.png" />
+    
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -67,7 +83,7 @@
                 <!-- blog-wrapper -->
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <a href="https://a7067iynsxn0du8eyec8ln7dxv.hop.clickbank.net" target="_blank"><img src="assets/imgs/magic-submitter.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"></a>
+                        <a href="https://a7067iynsxn0du8eyec8ln7dxv.hop.clickbank.net" target="_blank"><img src="assets/imgs/magic-submitter.png" class="blog-card-img" alt="magic submitter products mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">Why Magic Submitter?</h5>
@@ -187,11 +203,11 @@
     <!-- footer -->
     <div class="container">
         <footer class="footer">       
-            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com">DevCRUD</a></p>
+            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="#">Maciej Jaroszewski</a></p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="https://github.com/mjaroszewski1979" class="link" target="_blank"><i class="ti-github"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100058399907662" class="link" target="_blank"><i class="ti-facebook"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
+                <a href="mailto:mjaroszewski1979@gmail.com" class="link" target="_blank"><i class="ti-google"></i></a>
                 <a href="https://www.linkedin.com/in/maciej-jaroszewski-0aa0451bb/" class="link" target="_blank"><i class="ti-linkedin"></i></a>
                 <a href="https://www.instagram.com/naturalife.quest/" class="link" target="_blank"><i class="ti-instagram"></i></a>
                 <a href="https://www.youtube.com/channel/UCexMIW5hk934WSldDTnuWow" class="link" target="_blank"><i class="ti-youtube"></i></a>
