--- a/data-analysis.html
+++ b/data-analysis.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Data Analysis for Investing: Expert Insights into Python, Jupyter Notebook and Pandas</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Maciej Jaroszewski | Portfolio Website</title>
+    <meta name="description" content="Unlock the power of data analysis for the financial markets with my portfolio website! As a quantative finance enthusiast, I know the value of analyzing vast amounts of data to automate trading strategies and make informed decisions. Discover the benefits of using Python as your primary programming language and Pandas and Jupyter Notebook as your go-to tools for data manipulation. From stocks to crypto, I share my expertise in data science and financial markets analysis. Contact me today to discuss your own data analysis needs.">
+    <meta name="author" content="Maciej Jaroszewski">
+    <meta id="keywords" name="keywords" content="python, jupyter notebook, quantative finance, pandas library, data science, data analysis, financial markets, investing, stocks, crypto" />
+    <meta property="og:site_name" content="https://mjaroszewski.website" />
+    <meta property="og:url" content="https://mjaroszewski.website/data-analysis.html" />
+    <meta property="og:title" content="Data Analysis for Investing: Expert Insights into Python, Jupyter Notebook and Pandas" />
+    <meta property="og:description" content="Unlock the power of data analysis for the financial markets with my portfolio website! As a quantative finance enthusiast, I know the value of analyzing vast amounts of data to automate trading strategies and make informed decisions. Discover the benefits of using Python as your primary programming language and Pandas and Jupyter Notebook as your go-to tools for data manipulation. From stocks to crypto, I share my expertise in data science and financial markets analysis. Contact me today to discuss your own data analysis needs." />
+    <meta property="og:type" content="article" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NatLife_quest" />
+    <meta name="twitter:url" content="https://mjaroszewski.website" />
+    <meta name="twitter:title" content="Data Analysis for Investing: Expert Insights into Python, Jupyter Notebook and Pandas" />
+    <meta name="twitter:description" content="Unlock the power of data analysis for the financial markets with my portfolio website! As a quantative finance enthusiast, I know the value of analyzing vast amounts of data to automate trading strategies and make informed decisions. Discover the benefits of using Python as your primary programming language and Pandas and Jupyter Notebook as your go-to tools for data manipulation. From stocks to crypto, I share my expertise in data science and financial markets analysis. Contact me today to discuss your own data analysis needs." />
+    <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/data-analysis.png" />
+    
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -148,11 +164,11 @@
     <!-- footer -->
     <div class="container">
         <footer class="footer">       
-            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com">DevCRUD</a></p>
+            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="#">Maciej Jaroszewski</a></p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="https://github.com/mjaroszewski1979" class="link" target="_blank"><i class="ti-github"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100058399907662" class="link" target="_blank"><i class="ti-facebook"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
+                <a href="mailto:mjaroszewski1979@gmail.com" class="link" target="_blank"><i class="ti-google"></i></a>
                 <a href="https://www.linkedin.com/in/maciej-jaroszewski-0aa0451bb/" class="link" target="_blank"><i class="ti-linkedin"></i></a>
                 <a href="https://www.instagram.com/naturalife.quest/" class="link" target="_blank"><i class="ti-instagram"></i></a>
                 <a href="https://www.youtube.com/channel/UCexMIW5hk934WSldDTnuWow" class="link" target="_blank"><i class="ti-youtube"></i></a>
