--- a/find-the-right-keywords-for-your-business-with-power-suggest-pro-real-time-data.html
+++ b/find-the-right-keywords-for-your-business-with-power-suggest-pro-real-time-data.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Find the Right Keywords for Your Business with Power Suggest Pro's Real-Time Data</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Maciej Jaroszewski | Portfolio Website</title>
+    <meta name="description" content="Looking for a powerful keyword research tool that can help you improve your SEO strategies? Look no further than Power Suggest Pro! With its unique features and benefits, this tool is the perfect solution for businesses looking to uncover untapped keyword opportunities and improve their content strategy. By using Google's auto-suggest feature to generate hundreds of keyword ideas in real-time, Power Suggest Pro provides businesses with highly relevant and up-to-date keyword data that they can use to optimize their website's content and improve their search engine rankings. In this article, we'll explore the key features of Power Suggest Pro, provide step-by-step instructions on how to use the tool for keyword research, and highlight some real-world examples of how it has helped businesses achieve their marketing goals.">
+    <meta name="author" content="Maciej Jaroszewski">
+    <meta id="keywords" name="keywords" content="seo, seo strategies, keyword research, google auto-suggest, digitla marketing" />
+    <meta property="og:site_name" content="https://mjaroszewski.website" />
+    <meta property="og:url" content="https://mjaroszewski.website/find-the-right-keywords-for-your-business-with-power-suggest-pro-real-time-data.html" />
+    <meta property="og:title" content="Find the Right Keywords for Your Business with Power Suggest Pro's Real-Time Data" />
+    <meta property="og:description" content="Looking for a powerful keyword research tool that can help you improve your SEO strategies? Look no further than Power Suggest Pro! With its unique features and benefits, this tool is the perfect solution for businesses looking to uncover untapped keyword opportunities and improve their content strategy. By using Google's auto-suggest feature to generate hundreds of keyword ideas in real-time, Power Suggest Pro provides businesses with highly relevant and up-to-date keyword data that they can use to optimize their website's content and improve their search engine rankings. In this article, we'll explore the key features of Power Suggest Pro, provide step-by-step instructions on how to use the tool for keyword research, and highlight some real-world examples of how it has helped businesses achieve their marketing goals." />
+    <meta property="og:type" content="article" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NatLife_quest" />
+    <meta name="twitter:url" content="https://mjaroszewski.website" />
+    <meta name="twitter:title" content="Find the Right Keywords for Your Business with Power Suggest Pro's Real-Time Data" />
+    <meta name="twitter:description" content="Looking for a powerful keyword research tool that can help you improve your SEO strategies? Look no further than Power Suggest Pro! With its unique features and benefits, this tool is the perfect solution for businesses looking to uncover untapped keyword opportunities and improve their content strategy. By using Google's auto-suggest feature to generate hundreds of keyword ideas in real-time, Power Suggest Pro provides businesses with highly relevant and up-to-date keyword data that they can use to optimize their website's content and improve their search engine rankings. In this article, we'll explore the key features of Power Suggest Pro, provide step-by-step instructions on how to use the tool for keyword research, and highlight some real-world examples of how it has helped businesses achieve their marketing goals." />
+    <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/power-suggest-pro.png" />
+    
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -67,7 +83,7 @@
                 <!-- blog-wrapper -->
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <a href="https://bit.ly/power-suggest-pro" target="_blank"><img src="assets/imgs/power-suggest-pro.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page"></a>
+                        <a href="https://bit.ly/power-suggest-pro" target="_blank"><img src="assets/imgs/power-suggest-pro.png" class="blog-card-img" alt="power suggest pro product mockup"></a>
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">Why Power Suggest Pro?</h5>
@@ -186,11 +202,11 @@
     <!-- footer -->
     <div class="container">
         <footer class="footer">       
-            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com">DevCRUD</a></p>
+            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="#">Maciej Jaroszewski</a></p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="https://github.com/mjaroszewski1979" class="link" target="_blank"><i class="ti-github"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100058399907662" class="link" target="_blank"><i class="ti-facebook"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
+                <a href="mailto:mjaroszewski1979@gmail.com" class="link" target="_blank"><i class="ti-google"></i></a>
                 <a href="https://www.linkedin.com/in/maciej-jaroszewski-0aa0451bb/" class="link" target="_blank"><i class="ti-linkedin"></i></a>
                 <a href="https://www.instagram.com/naturalife.quest/" class="link" target="_blank"><i class="ti-instagram"></i></a>
                 <a href="https://www.youtube.com/channel/UCexMIW5hk934WSldDTnuWow" class="link" target="_blank"><i class="ti-youtube"></i></a>
