--- a/live-projects.html
+++ b/live-projects.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Python Web Development Projects: Live Examples of Deployed Websites on Various Platforms</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Maciej Jaroszewski | Portfolio Website</title>
+    <meta name="description" content="Looking for live deployment examples of web development projects? Look no further than my portfolio website! Featuring Django, Flask, FastAPI, and more, I showcase my Python skills with live website deployments on PythonAnywhere, Deta, Vercel, Netlify, and other platforms. Explore my collection of projects and see the results for yourself. Contact me today to discuss your own deployment needs.">
+    <meta name="author" content="Maciej Jaroszewski">
+    <meta id="keywords" name="keywords" content="live deployment examples for portfolio projects, django, python, flask, fastapi, pythonanywhere, deta, vercel, netlify" />
+    <meta property="og:site_name" content="https://mjaroszewski.website" />
+    <meta property="og:url" content="https://mjaroszewski.website/live-projects.html" />
+    <meta property="og:title" content="Python Web Development Projects: Live Examples of Deployed Websites on Various Platforms" />
+    <meta property="og:description" content="Looking for live deployment examples of web development projects? Look no further than my portfolio website! Featuring Django, Flask, FastAPI, and more, I showcase my Python skills with live website deployments on PythonAnywhere, Deta, Vercel, Netlify, and other platforms. Explore my collection of projects and see the results for yourself. Contact me today to discuss your own deployment needs." />
+    <meta property="og:type" content="article" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NatLife_quest" />
+    <meta name="twitter:url" content="https://mjaroszewski.website" />
+    <meta name="twitter:title" content="Python Web Development Projects: Live Examples of Deployed Websites on Various Platforms" />
+    <meta name="twitter:description" content="Looking for live deployment examples of web development projects? Look no further than my portfolio website! Featuring Django, Flask, FastAPI, and more, I showcase my Python skills with live website deployments on PythonAnywhere, Deta, Vercel, Netlify, and other platforms. Explore my collection of projects and see the results for yourself. Contact me today to discuss your own deployment needs." />
+    <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/web-dev-django.png" />
+    
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -138,11 +154,11 @@
     <!-- footer -->
     <div class="container">
         <footer class="footer">       
-            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com">DevCRUD</a></p>
+            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="#">Maciej Jaroszewski</a></p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="https://github.com/mjaroszewski1979" class="link" target="_blank"><i class="ti-github"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100058399907662" class="link" target="_blank"><i class="ti-facebook"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
+                <a href="mailto:mjaroszewski1979@gmail.com" class="link" target="_blank"><i class="ti-google"></i></a>
                 <a href="https://www.linkedin.com/in/maciej-jaroszewski-0aa0451bb/" class="link" target="_blank"><i class="ti-linkedin"></i></a>
                 <a href="https://www.instagram.com/naturalife.quest/" class="link" target="_blank"><i class="ti-instagram"></i></a>
                 <a href="https://www.youtube.com/channel/UCexMIW5hk934WSldDTnuWow" class="link" target="_blank"><i class="ti-youtube"></i></a>
