--- a/web_development.html
+++ b/web_development.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>From Simplicity to Complexity: Choosing the Best Python Web Framework for Your Projects</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
-    <title>Maciej Jaroszewski | Portfolio Website</title>
+    <meta name="description" content="Explore the world of web development with Python on my portfolio website! Starting with Flask and moving to FastAPI before settling on Django, I share my journey and expertise in website design and both backend and frontend technologies. With its helpful community support and 'batteries included' structure, Django is my go-to framework for efficient project completion. Whether you're new to web development or an experienced developer, my insights can help you succeed. Contact me today to discuss your own web development needs.">
+    <meta name="author" content="Maciej Jaroszewski">
+    <meta id="keywords" name="keywords" content="django, python, flask, fastapi, web development, python, website design, backend technologies, frontend technologies" />
+    <meta property="og:site_name" content="https://mjaroszewski.website" />
+    <meta property="og:url" content="https://mjaroszewski.website/web_development.html" />
+    <meta property="og:title" content="From Simplicity to Complexity: Choosing the Best Python Web Framework for Your Projects" />
+    <meta property="og:description" content="Explore the world of web development with Python on my portfolio website! Starting with Flask and moving to FastAPI before settling on Django, I share my journey and expertise in website design and both backend and frontend technologies. With its helpful community support and 'batteries included' structure, Django is my go-to framework for efficient project completion. Whether you're new to web development or an experienced developer, my insights can help you succeed. Contact me today to discuss your own web development needs." />
+    <meta property="og:type" content="article" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@NatLife_quest" />
+    <meta name="twitter:url" content="https://mjaroszewski.website" />
+    <meta name="twitter:title" content="From Simplicity to Complexity: Choosing the Best Python Web Framework for Your Projects" />
+    <meta name="twitter:description" content="Explore the world of web development with Python on my portfolio website! Starting with Flask and moving to FastAPI before settling on Django, I share my journey and expertise in website design and both backend and frontend technologies. With its helpful community support and 'batteries included' structure, Django is my go-to framework for efficient project completion. Whether you're new to web development or an experienced developer, my insights can help you succeed. Contact me today to discuss your own web development needs." />
+    <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/web-dev-django.png" />
+    
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="675" />
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
@@ -67,7 +83,7 @@
                 <!-- blog-wrapper -->
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/web-dev-django.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/web-dev-django.png" class="blog-card-img" alt="cartoon image of kids around computer screen">
                     </div>
                     <div class="blog-card-body">
                         <h5 class="blog-card-title">Model-View-Controller Architecture</h6>
@@ -150,11 +166,11 @@
     <!-- footer -->
     <div class="container">
         <footer class="footer">       
-            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="http://www.devcrud.com">DevCRUD</a></p>
+            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="#">Maciej Jaroszewski</a></p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="https://github.com/mjaroszewski1979" class="link" target="_blank"><i class="ti-github"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100058399907662" class="link" target="_blank"><i class="ti-facebook"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
+                <a href="mailto:mjaroszewski1979@gmail.com" class="link" target="_blank"><i class="ti-google"></i></a>
                 <a href="https://www.linkedin.com/in/maciej-jaroszewski-0aa0451bb/" class="link" target="_blank"><i class="ti-linkedin"></i></a>
                 <a href="https://www.instagram.com/naturalife.quest/" class="link" target="_blank"><i class="ti-instagram"></i></a>
                 <a href="https://www.youtube.com/channel/UCexMIW5hk934WSldDTnuWow" class="link" target="_blank"><i class="ti-youtube"></i></a>
