added sitemap.html file link

--- a/get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html
+++ b/get-accurate-ip-geolocation-data-with-our-json-web-token-authenticated-django-rest-api.html
@@ -131,7 +131,7 @@
      <!-- footer -->
      <div class="container">
         <footer class="footer">       
-            <p class="mb-0">Copyright <script>document.write(new Date().getFullYear())</script> &copy; <a href="#">Maciej Jaroszewski</a></p>
+            <p class="mb-0">Maciej Jaroszewski <script>document.write(new Date().getFullYear())</script> | <a href="sitemap.html">Sitemap</a></p>
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="https://github.com/mjaroszewski1979" class="link" target="_blank"><i class="ti-github"></i></a>
                 <a href="https://www.facebook.com/profile.php?id=100058399907662" class="link" target="_blank"><i class="ti-facebook"></i></a>
