added target - blank atrr to my links in link.html file

--- a/links.html
+++ b/links.html
@@ -120,7 +120,7 @@
                                 </div>
                                 <div class="testimonial-card-body">
                                     <p class="testimonial-card-subtitle">Mastering Forex Trading: Understanding Market Trends and Increasing Your Success Rate.</p>
-                                    <a href="https://bit.ly/taurus-trading"><h6 class="testimonial-card-title">Free FX Ebook - Claim Today!</h6></a>
+                                    <a href="https://bit.ly/taurus-trading" target="_blank"><h6 class="testimonial-card-title">Free FX Ebook - Claim Today!</h6></a>
                                 </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                                 </div>
                                 <div class="testimonial-card-body">
                                     <p class="testimonial-card-subtitle">Take control of your financial future with Taurus Trading: Experts in FX, crypto, and stocks.</p>
-                                    <a href="https://www.youtube.com/@taurustrading9727/shorts"><h6 class="testimonial-card-title">YouTube Channel - View Now!</h6></a>
+                                    <a href="https://www.youtube.com/@taurustrading9727/shorts" target="_blank"><h6 class="testimonial-card-title">YouTube Channel - View Now!</h6></a>
                                 </div>
                             </div>
                         </div>
