--- a/links.html
+++ b/links.html
@@ -63,7 +63,7 @@
                 <div class="container text-center">
 
                         <p class="section-subtitle text-light"><strong>My Recent Works</strong></p>
-                        <h6 class="section-title mb-6 text-light">Click on The Icon to See More!</h6>
+                        <h6 class="section-title mb-6 text-light">Click on The Link to See More!</h6>
                         <!-- blog-wrapper -->
                         <div class="blog-card">
                             <div class="blog-card-header">
